[gd_scene load_steps=4 format=2]

[ext_resource path="res://Src/Outgame/create_hero.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/hud/spritesheet.png" type="Texture" id=2]

[sub_resource type="TileSet" id=1]
0/name = "sol0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 384, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[node name="create_hero" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 196609, 0, 0, 327681, 0, 0, 458753, 0, 0 )

[node name="classe" type="Label" parent="TileMap"]
modulate = Color( 0.458824, 0.458824, 0.458824, 1 )
margin_left = 19.3688
margin_top = 65.8306
margin_right = 163.369
margin_bottom = 126.831
custom_colors/font_color = Color( 0.435294, 0.0627451, 0.0627451, 1 )
text = "Classe :"
align = 1
valign = 1
autowrap = true

[node name="Tank" type="Button" parent="TileMap/classe"]
modulate = Color( 1, 1, 0.996078, 1 )
self_modulate = Color( 0.901961, 0.890196, 0.890196, 1 )
margin_left = 169.415
margin_top = 4.00002
margin_right = 242.415
margin_bottom = 54.0
custom_colors/font_color_disabled = Color( 0.945098, 0.929412, 0.917647, 1 )
custom_colors/font_color = Color( 0.945098, 0.929412, 0.917647, 1 )
custom_colors/font_color_hover = Color( 0.945098, 0.929412, 0.917647, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.929412, 0.917647, 1 )
text = "Tank"

[node name="Tank_stats" type="Label" parent="TileMap/classe"]
modulate = Color( 0.584314, 0.168627, 0.168627, 1 )
margin_left = 248.123
margin_top = -20.7541
margin_right = 363.123
margin_bottom = 69.2459
text = "Beaucoup de vie

Peu de dégats"
align = 1
valign = 1
autowrap = true

[node name="Assassin_stats" type="Label" parent="TileMap/classe"]
modulate = Color( 0.803922, 0.164706, 0.164706, 1 )
margin_left = 475.877
margin_top = 0.292358
margin_right = 626.877
margin_bottom = 82.2924
text = "Peu de vie

Beaucoup de dégats

"
align = 1
valign = 1
autowrap = true

[node name="Assassin" type="Button" parent="TileMap/classe"]
margin_left = 400.0
margin_top = 3.0
margin_right = 478.0
margin_bottom = 58.0
text = "Assassin"

[node name="Mage" type="Button" parent="TileMap/classe"]
margin_left = 671.0
margin_top = 4.0
margin_right = 750.0
margin_bottom = 60.0
text = "Mage"

[node name="Mage_stats" type="Label" parent="TileMap/classe"]
modulate = Color( 0.623529, 0.0823529, 0.0823529, 1 )
margin_left = 785.708
margin_top = 4.70765
margin_right = 901.708
margin_bottom = 84.7076
text = "Vie moyenne

Dégats moyens"

[node name="choix1" type="Label" parent="TileMap"]
modulate = Color( 0.733333, 0.0588235, 0.0588235, 1 )
margin_left = 54.3222
margin_top = 205.123
margin_right = 137.322
margin_bottom = 253.123
text = "Choix 1 :"
align = 1
valign = 1
autowrap = true

[node name="choix2" type="Label" parent="TileMap"]
modulate = Color( 0.580392, 0.0313726, 0.0313726, 1 )
margin_left = 67.1229
margin_top = 332.0
margin_right = 123.123
margin_bottom = 375.0
text = "Choix 2 :"
align = 1
valign = 1
autowrap = true

[node name="choix3" type="Label" parent="TileMap"]
modulate = Color( 0.588235, 0.0392157, 0.0392157, 1 )
margin_left = 63.5382
margin_top = 463.0
margin_right = 124.538
margin_bottom = 504.0
text = "Choix 3 :"
align = 1
valign = 1
autowrap = true

[node name="Jouer" type="Button" parent="TileMap"]
margin_left = 399.508
margin_top = 547.462
margin_right = 685.508
margin_bottom = 604.462
text = "Jouer"
[connection signal="pressed" from="TileMap/classe/Tank" to="." method="_on_Tank_pressed"]
[connection signal="pressed" from="TileMap/classe/Assassin" to="." method="_on_Assassin_pressed"]
[connection signal="pressed" from="TileMap/classe/Mage" to="." method="_on_Mage_pressed"]
[connection signal="pressed" from="TileMap/Jouer" to="." method="_on_Button_pressed"]
